--- a/components/editor/EditorViewport.module.css
+++ b/components/editor/EditorViewport.module.css
@@ -31,6 +31,7 @@
   min-height: 0;
   min-width: 0;
   position: relative;
+  touch-action: none;
 }
 
 .workspaceSplit .threePane {
@@ -41,7 +42,12 @@
 .canvas3d {
   position: absolute;
   inset: 0;
+  touch-action: none;
   z-index: 0;
+}
+
+.canvas3d canvas {
+  touch-action: none;
 }
 
 .canvasPane {
